# shared-observability

./: .gitignore  pyproject.toml
shared_observability/: __init__.py
shared_observability/eval/: __init__.py  catalog.py  models.py  scheduler.py
shared_observability/eval/runners/: __init__.py  base.py  heuristic.py  llm_judge.py
shared_observability/otel_core/: __init__.py  instrumentors.py  propagation.py  provider.py
